--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -8,6 +8,7 @@
     <a href="{{ path(accueil) }}">Home</a>
     <a href="{{ path(info) }}">Info</a>
     <a href="{{ path(query, {"name": "Mohamed"}) }}">Query</a>
+    <a href="{{ path(inscription) }}">Inscription</a>
 </p>
 {{ content|raw }}
 </body>
